<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学生端</string>
    <string name="teacher">老师推荐</string>
    <string name="system">系统推荐</string>
    <string name="address">杭州</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login_denglu">登陆</string>
	<string name="set_zhuce">注册</string>
	<string name="set_dengluxinxi">请输入账号</string>
	<string name="set_zhucexinxi">请输入密码</string>
	<string name="set_zhuceshoujihao">请输入手机号</string>
	<string name="set_zhuceyanzhengma">验证码</string>
	<string name="set_zhucemima">密码6-20位字符</string>
	<string name="set_zhucemimaagain">再次输入密码</string>
	<string name="set_zhucefinish">完成</string>
</resources>
