<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/set_zhuceshoujihao"
        android:textColor="@color/gray"
        android:textSize="20sp">
	    <requestFocus />
	</EditText>
    <EditText
        android:id="@+id/yanzhengma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/set_zhuceyanzhengma"
        android:textColor="@color/gray"
        android:textSize="20sp">
	</EditText>
   <EditText
        android:id="@+id/mima1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/set_zhucemima"
        android:textColor="@color/gray"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:text="">
	</EditText>
    <EditText
        android:id="@+id/mima2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/set_zhucemimaagain"
        android:textColor="@color/gray"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:text="">
	</EditText>
	<Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:textColor="@color/write"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textSize="25sp" 
        android:background="@drawable/shape"
        android:text="@string/set_zhucefinish" />
	<TextView
	    android:id="@+id/result"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:textColor="@color/red"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textSize="25sp" >
        </TextView>
</LinearLayout>